--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   sqflite: ^2.3.3+1
   url_launcher: ^6.3.0
   intl: ^0.19.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/images/app_logo.png"
 
 dev_dependencies:
   flutter_test:
